# Peptipedia2.0

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  requirements.txt
activities_data/: activities  compare_names.py  data_activity_classify.txt  new_activity  (+18 more)
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  config.ini  pyproject.toml  requirements.txt
backend/conf/: gunicorn.conf.py
backend/install_requisites/: requirements.txt
backend/peptipedia/: blueprint.py  config.py  main.py  wsgi.py
backend/peptipedia/modules/: activity_prediction.py  alignment.py  alignment_clustering.py  alignment_module.py  clustering_process.py  database.py  distance_clustering.py  encoding.py  fasta_convertor.py  frequency_analysis.py  gene_ontology.py  materialized_views.py  models.py  msa_module.py  pca_process.py  pfam_domain.py  phisicochemical_module.py  search.py  structural_characterization.py  structure.py  supervised_learning.py  utils.py
backend/peptipedia/modules/clustering_methods/: clustering_algorithm.py  evaluation_performances.py  graph_clustering.py  transformation_data.py
backend/peptipedia/modules/encoding_AAIndex/alpha-structure_group/: data_component.csv
backend/peptipedia/modules/encoding_AAIndex/secondary_structure_properties_group/: data_component.csv
backend/peptipedia/modules/encoding_strategies/: encoder.py  run_fft_encoding.py  run_one_hot.py  run_physicochemical_properties.py
backend/peptipedia/modules/encoding_strategies/encoding_AAIndex/hydropathy_group/: data_component.csv
backend/peptipedia/modules/training_supervised_learning/: response_training.py  run_algorithm.py  supervised_algorithm.py
backend/peptipedia/routes/: advanced_search.py  bioinformatic_tools.py  database.py  home.py  machine_learning_tools.py  predictive_models.py  profile.py  statistic_tools.py  tools.py
backend/src/: blueprint.py  config.ini  main.py  wsgi.py
backend/src/modules/: alignment_clustering.py  alignment_module.py  api.py  characterizator.py  clustering_process.py  codifications.py  database.py  distance_clustering.py  encoding.py  fasta_convertor.py  frequency_analysis.py  gene_ontology.py  interface.py  msa_module.py  pca_process.py  pfam_domain.py  phisicochemical_module.py  search.py  structure.py  supervised_learning.py  tool.py  utils.py  verify_fasta.py
backend/src/modules/clustering_methods/: clustering_algorithm.py  evaluation_performances.py  transformation_data.py
backend/src/modules/encoding_AAIndex/hydrophobicity_group/: data_component.csv
backend/src/modules/encoding_AAIndex/index_group/: data_component.csv
backend/src/modules/encoding_strategies/: encoder.py  encoding_one_hot.py  encoding_one_hot_paralel_version.py  encoding_using_Fourier_Transform.py  encoding_using_physicochemical_properties_paralel.py  run_fft_encoding.py  run_one_hot.py  run_physicochemical_properties.py
backend/src/modules/training_supervised_learning/: response_training.py  run_algorithm.py  supervised_algorithm.py  testing_files.py
backend/src/routes/: advanced_search.py  bioinformatic_tools.py  database.py  home.py  machine_learning_tools.py  profile.py  statistic_tools.py  tools.py
(+400 files in other folders)
